# ChunGeEr

./: .gitignore  datang_font.bfl
ChunGeEr/: CMakeLists.txt  accountdialog.cpp  accountdialog.h  autologin.cpp  autologin.h  bitmapfontlib.cpp  bitmapfontlib.h  encodingmanager.cpp  encodingmanager.h  gameslot.cpp  gameslot.h  gameutils.cpp  gameutils.h  keyboardlistener.cpp  keyboardlistener.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mousekeyboardmanager.cpp  mousekeyboardmanager.h  safepacket.cpp  safepacket.h  screencapturemanager.cpp  screencapturemanager.h  screenshare.cpp  screenshare.h  signalslotconnector.cpp  signalslotconnector.h  slotscheduler.cpp  slotscheduler.h  storagevidoemanager.cpp  storagevidoemanager.h  train_capture.cpp  wsmanager.cpp  wsmanager.h
ChunGeEr/Commons/Log/: XuLog.h
ChunGeEr/Control/: mouselabel.cpp  mouselabel.h
ChunGeEr/Detector/: detectormanager.cpp  detectormanager.h
ChunGeEr/Encode/: encodingmanager.cpp  encodingmanager.h
ChunGeEr/LeoControl/: mousekeyboardmanager.cpp  mousekeyboardmanager.h  serialportmanager.cpp  serialportmanager.h
ChunGeEr/Ocr/: ocrmnager.cpp  ocrmnager.h  ocrpreprocess.h  paddleocr.cpp  paddleocr.h  paddleocrhengine.cpp  paddleocrhengine.h  tesseractocr.cpp  tesseractocr.h
ChunGeEr/ScreenShare/: screenshare.cpp  screenshare.h
ChunGeEr/StorageVideo/: StorageVidoeManager.h  storagevidoemanager.cpp
ChunGeEr/Ui/: gameitemcapturewidget.cpp  gameitemcapturewidget.h  screensharewidget.cpp  screensharewidget.h  screensharewidget.ui
ChunGeEr/WsManager/: wsmanager.cpp  wsmanager.h
ChunGeEr/service/: baseservice.cpp  baseservice.h
ChunGeEr/service/BackgroundTask/: backgroundtaskservice.cpp  backgroundtaskservice.h
ChunGeEr/service/CatchMonsters/: catchmonstersservice.cpp  catchmonstersservice.h
ChunGeEr/service/MainQuest/: mainquestservice.cpp  mainquestservice.h
ChunGeEr/service/Record/: record.cpp  record.h
ChunGeEr/service/dungeon/: dungeonservice.cpp  dungeonservice.h
Leo/sketch_oct5a/: sketch_oct5a.ino
Libs/: org.sw.demo.danbloomberg.leptonica-1.85.0.lib
Libs/Debug/: hv.exp  lstmevalxu.exp  lstmevalxu.lib  opencv_calib3d490d.exp  opencv_calib3d490d.lib  opencv_core490d.exp  opencv_dnn490d.exp  opencv_dnn490d.lib  opencv_features2d490d.exp  opencv_features2d490d.lib  opencv_flann490d.exp  opencv_flann490d.lib  opencv_gapi490d.exp  opencv_gapi490d.lib  opencv_highgui490d.exp  opencv_highgui490d.lib  opencv_imgcodecs490d.exp  opencv_imgproc490d.exp  opencv_java490.exp  opencv_java490.lib  opencv_ml490d.exp  opencv_ml490d.lib  opencv_objdetect490d.exp  opencv_objdetect490d.lib  opencv_photo490d.exp  opencv_photo490d.lib  opencv_stitching490d.exp  opencv_stitching490d.lib  opencv_video490d.exp  opencv_video490d.lib  opencv_videoio490d.exp  opencv_videoio490d.lib  tesseractrain.lib
Libs/Release/: hv.exp  hv.lib  lstmevalxu.exp  lstmevalxu.lib  opencv_calib3d490.exp  opencv_calib3d490.lib  opencv_core490.exp  opencv_dnn490.exp  opencv_dnn490.lib  opencv_features2d490.exp  opencv_features2d490.lib  opencv_flann490.exp  opencv_flann490.lib  opencv_gapi490.exp  opencv_gapi490.lib  opencv_highgui490.exp  opencv_highgui490.lib  opencv_imgcodecs490.exp  opencv_imgproc490.exp  opencv_java490.exp  opencv_java490.lib  opencv_ml490.exp  opencv_ml490.lib  opencv_objdetect490.exp  opencv_objdetect490.lib  opencv_photo490.exp  opencv_photo490.lib  opencv_stitching490.exp  opencv_stitching490.lib  opencv_video490.exp  opencv_video490.lib  opencv_videoio490.exp  opencv_videoio490.lib  tesseractrain.lib
Log/: XuLog.cpp  XuLog.h
ScreenCapture/: ScreenCapture.cpp  ScreenCapture.h  screencapturemanager.cpp  screencapturemanager.h
Train/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
YoloOnnx/: inference.cpp  inference.h
include/spdlog/: common.h
include/tesseract/: TesseractTrain.h  lstmtrainingxu.h
trainning/: font_properties  makebox.bat  train.bat
trainning/font/: binary_output.box  binary_output.tr  chi_sim_custom.inttemp  chi_sim_custom.pffmtable  chi_sim_custom.shapetable  chi_sim_custom.traineddata  chi_sim_custom.unicharset  normproto  train.bat  unicharset
